--- a/copy_link.html
+++ b/copy_link.html
@@ -4,29 +4,54 @@
 <title>Copy Link</title>
 <script>
 document.addEventListener("DOMContentLoaded", function () {
-    const linkElement = document.querySelector("a");
-    
+    const linkElement = document.querySelector("#copy-link");
+
     linkElement.addEventListener("click", function (event) {
-        event.preventDefault(); // Prevent opening a new tab
+        event.preventDefault(); // Prevent default link behavior
 
-        // Extract the 'link' parameter from the URL
-        const url = new URL(window.location.href);
-        const encodedLink = url.searchParams.get('link');
-        const fullLink = decodeURIComponent(encodedLink); // Decode the link
+        // Open a new tab
+        const newTab = window.open("", "_blank");
 
-        // Copy the link to the clipboard
-        navigator.clipboard.writeText(fullLink).then(() => {
-            alert('Lien copié'); // Show success message
-            window.close(); // Attempt to close the tab
-        }).catch(err => {
-            console.error('Failed to copy:', err);
-        });
+        if (newTab) {
+            // Insert a message in the new tab
+            newTab.document.write(`
+                <html>
+                <body>
+                    <p id="message">Processing...</p>
+                    <script>
+                        // Extract the 'link' parameter from the original URL
+                        const url = new URL(window.opener.location.href);
+                        const encodedLink = url.searchParams.get('link');
+                        const fullLink = decodeURIComponent(encodedLink);
+
+                        // Copy the link to the clipboard
+                        navigator.clipboard.writeText(fullLink)
+                            .then(() => {
+                                document.getElementById('message').textContent = 'Link copied! Click OK to close.';
+                                if (confirm('Lien copié! Cliquez sur OK pour fermer.')) {
+                                    window.close(); // Close the tab
+                                }
+                            })
+                            .catch(err => {
+                                document.getElementById('message').textContent = 'Failed to copy.';
+                                console.error('Failed to copy:', err);
+                            });
+                    </script>
+                </body>
+                </html>
+            `);
+
+            // Focus on the new tab
+            newTab.focus();
+        } else {
+            alert("Unable to open a new tab. Please check your browser's settings.");
+        }
     });
 });
 </script>
 </head>
 <body>
-<!-- Clickable link that will not open a new tab -->
+<!-- Clickable link -->
 <a href="#" id="copy-link">Copier le lien</a>
 </body>
 </html>
