--- a/copy_link2.html
+++ b/copy_link2.html
@@ -7,13 +7,13 @@ document.addEventListener("DOMContentLoaded", function () {
     const linkElement = document.querySelector("#copy-link");
 
     linkElement.addEventListener("click", function (event) {
-        event.preventDefault(); // Prevent default behavior
+        event.preventDefault(); // Prevent default link behavior
 
         // Open a new tab
         const newTab = window.open("", "_blank");
 
         if (newTab) {
-            // Prepare the content for the new tab
+            // Dynamically create HTML content for the new tab
             const tabContent = `
                 <!DOCTYPE html>
                 <html>
@@ -23,23 +23,25 @@ document.addEventListener("DOMContentLoaded", function () {
                 <body>
                     <p id="message">Processing...</p>
                     <script>
-                        // Extract the 'link' parameter from the original URL
-                        const url = new URL(window.opener.location.href);
-                        const encodedLink = url.searchParams.get('link');
-                        const fullLink = decodeURIComponent(encodedLink || "");
+                        (function() {
+                            // Extract the 'link' parameter from the original URL
+                            const url = new URL(window.opener.location.href);
+                            const encodedLink = url.searchParams.get('link');
+                            const fullLink = decodeURIComponent(encodedLink || "");
 
-                        // Copy the link to the clipboard
-                        navigator.clipboard.writeText(fullLink)
-                            .then(() => {
-                                document.getElementById('message').textContent = 'Link copied! Click OK to close.';
-                                if (confirm('Lien copié! Cliquez sur OK pour fermer.')) {
-                                    window.close(); // Close the tab
-                                }
-                            })
-                            .catch(err => {
-                                document.getElementById('message').textContent = 'Failed to copy.';
-                                console.error('Failed to copy:', err);
-                            });
+                            // Copy the link to the clipboard
+                            navigator.clipboard.writeText(fullLink)
+                                .then(() => {
+                                    document.getElementById('message').textContent = 'Link copied! Click OK to close.';
+                                    if (confirm('Lien copié! Cliquez sur OK pour fermer.')) {
+                                        window.close(); // Close the tab
+                                    }
+                                })
+                                .catch(err => {
+                                    document.getElementById('message').textContent = 'Failed to copy.';
+                                    console.error('Failed to copy:', err);
+                                });
+                        })();
                     </script>
                 </body>
                 </html>
