--- a/copy_link2.html
+++ b/copy_link2.html
@@ -2,67 +2,24 @@
 <html>
 <head>
 <title>Copy Link</title>
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-    const linkElement = document.querySelector("#copy-link");
-
-    linkElement.addEventListener("click", function (event) {
-        event.preventDefault(); // Prevent default link behavior
-
-        // Open a new tab
-        const newTab = window.open("", "_blank");
-
-        if (newTab) {
-            // Dynamically create HTML content for the new tab
-            const tabContent = `
-                <!DOCTYPE html>
-                <html>
-                <head>
-                    <title>Processing...</title>
-                </head>
-                <body>
-                    <p id="message">Processing...</p>
-                    <script>
-                        (function() {
-                            // Extract the 'link' parameter from the original URL
-                            const url = new URL(window.opener.location.href);
-                            const encodedLink = url.searchParams.get('link');
-                            const fullLink = decodeURIComponent(encodedLink || "");
-
-                            // Copy the link to the clipboard
-                            navigator.clipboard.writeText(fullLink)
-                                .then(() => {
-                                    document.getElementById('message').textContent = 'Link copied! Click OK to close.';
-                                    if (confirm('Lien copié! Cliquez sur OK pour fermer.')) {
-                                        window.close(); // Close the tab
-                                    }
-                                })
-                                .catch(err => {
-                                    document.getElementById('message').textContent = 'Failed to copy.';
-                                    console.error('Failed to copy:', err);
-                                });
-                        })();
-                    </script>
-                </body>
-                </html>
-            `;
-
-            // Write the content to the new tab
-            newTab.document.open();
-            newTab.document.write(tabContent);
-            newTab.document.close();
-
-            // Focus on the new tab
-            newTab.focus();
-        } else {
-            alert("Unable to open a new tab. Please check your browser's settings.");
-        }
-    });
-});
-</script>
 </head>
 <body>
-<!-- Clickable link -->
-<a href="#" id="copy-link">Copier le lien</a>
+<script>
+function copyLink() {
+    // Retrieve the full encoded URL from the 'link' parameter
+    const url = new URL(window.location.href);
+    const encodedLink = url.searchParams.get('link');
+    const fullLink = decodeURIComponent(encodedLink); // Decode the link
+
+    // Copy the decoded full link to the clipboard
+    navigator.clipboard.writeText(fullLink).then(() => {
+        alert('Link copied to clipboard: ' + fullLink);
+    }).catch(err => {
+        console.error('Failed to copy: ', err);
+    });
+}
+
+window.onload = copyLink;
+</script>
 </body>
 </html>
