--- a/copy_link3.html
+++ b/copy_link3.html
@@ -14,10 +14,10 @@ function copyLink() {
 
     // Copy the decoded full link to the clipboard
     navigator.clipboard.writeText(fullLink).then(() => {
-        alert('Lien copié: ' + fullLink);
+        alert('Lien copié');
         window.close();
     }).catch(err => {
-        console.error('Failed to copy: ', err);
+        console.error('Erreur lors de la copie: ', err);
     });
 }
 
